fixed file list time wrap. fixes #749

--- a/assets/main.css
+++ b/assets/main.css
@@ -343,7 +343,7 @@ tbody {
 }
 
 #expiry-time-file-list {
-  width: 21%;
+  width: 25%;
 }
 
 #expiry-downloads-file-list {
@@ -351,7 +351,7 @@ tbody {
 }
 
 #delete-file-list {
-  width: 12%;
+  width: 7%;
 }
 
 .overflow-col {
